<resources>
    <string name="app_name">HabitTrainer</string>
    <string name="drink_water_desc">A refreshing glass of water gets you hydrated</string>
    <string name="drink_water">Drink Water</string>
    <string name="begin_new_habit">Begin New Habit</string>
    <string name="eat_an_apple">Eat an apple</string>
    <string name="apple_description">An apple a day keeps the doctor away</string>
    <string name="choose_image">Choose Image</string>
    <string name="save">Save Habit</string>
    <string name="selected_image">Selected image</string>
    <string name="habit_type">Habit Type:</string>
    <string-array name="habit_type">
        <item>BOOLEAN</item>
        <item>NUMERIC</item>
    </string-array>
    <string name="last_day_used">dayLastUse</string>
    <string name="see_progress">See Progress</string>
    <string name="title_activity_plots">PlotsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>