<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateHabitActivity"
    android:padding="@dimen/padding"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_title"
        android:hint="@string/eat_an_apple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_description"
        android:inputType="textMultiLine"
        android:lines="2"
        android:hint="@string/apple_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_choose_img"
        android:text="@string/choose_image"
        android:onClick="chooseImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/iv_img"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:visibility="gone"
        android:contentDescription="@string/selected_image"
        android:layout_width="200dp"
        android:layout_height="200dp"/>

    <Button
        android:id="@+id/btn_save"
        android:text="@string/save"
        android:onClick="saveHabit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_error"
        android:visibility="invisible"
        android:textColor="@color/colorError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>